bug fix error style on mobile

--- a/src/routes/search/error/Error.css
+++ b/src/routes/search/error/Error.css
@@ -32,10 +32,34 @@
   }
 
   .searchErrorContainer img {
-    width: 60%;
+    width: 55%;
   }
 
   .searchErrorDetail {
     width: auto;
+    font-size: 1.3rem;
+  }
+
+  .searchErrorTitle {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .searchErrorContainer {
+    width: 100%;
+  }
+
+  .searchErrorContainer img {
+    width: 55%;
+  }
+
+  .searchErrorDetail {
+    width: auto;
+    font-size: 1.2rem;
+  }
+
+  .searchErrorTitle {
+    font-size: 1.5rem;
   }
 }
